Fix spacing for ul p + ul

--- a/html/custom.scss
+++ b/html/custom.scss
@@ -180,15 +180,24 @@ p a.btn, .buttons span.btn {
   font-size: 1.2rem;
 }
 
-// No space after lists-within-lists
 main {
+  // No space after lists-within-lists
   ol ol,
   ul ul,
   ol ul,
   ul ol {
     margin-bottom: 0em;
   }
+
+  // But yes space after lists-within-lists when paragraphs are involved
+  ol p + ol,
+  ul p + ul,
+  ol p + ul,
+  ul p + ol {
+    margin-bottom: 1em;
+  }
 }
+
 
 // Make callout text and icon bigger
 .callout.callout-style-default {
